# api_development

./: .gitignore  MARKDOWN.md  README.md  file_3.json
ORM_sqlalchemy/orm_sqlalchemy_1/: README.md  database.py  lesson_2.py  lesson_3.py  requirements.txt
XML/: 1_file.xml  2_file.xml  3_file.xml  4_file.xml  xsd_file.xml  xsd_file_2.xml  xsd_file_3.xml
fastAPI/fastAPI_beyond_CRUD/: main.py  pyproject.toml
fastAPI/fastAPI_suren/fastAPI_web_application_1/: items_views.py  main.py  pyproject.toml  requirements.txt
fastAPI/fastAPI_suren/fastAPI_web_application_1/core/: config.py
fastAPI/fastAPI_suren/fastAPI_web_application_1/core/models/: __init__.py  base.py  db_helper.py  product.py
fastAPI/fastAPI_suren/fastAPI_web_application_1/users/: crud.py  schemas.py  views.py
fastAPI_react_integration/backend/: test.py
openRPC/: file_1.json  file_2.json
postman/: postman_tutorial_postman_environment.json  simple_book_api_postman_collection.json
postman/newman/: Simple Book API-2024-12-16-14-36-18-330-0.html
pytest/pytest_freecodecamp/: pytest.ini
pytest/pytest_freecodecamp/source/: my_functions.py  school.py  service.py  shapes.py
pytest/pytest_freecodecamp/test/: test_circle.py  test_my_functions.py  test_rectangle.py  test_school.py  test_service.py  test_square.py
pytest/pytest_project/src/: main.py
pytest/pytest_project/test_/: test_main.py
pytest_project/src/: main.py
pytest_project/test_/: test_main.py
pytest_project/tests/: test_main.py
pythonAPI/: application.py  main.py  requirements.txt
python_common/python_OOP/: alphabet.py  baseClass.py  calculator.py  car.py  new_alphabet.py  person.py
