[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "andre353",email = "eva595eva@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
